docs: complete REVIEW, README, AI-USAGE and ADR
- REVIEW.md: 13 findings with full change log (35 changes, 150->168 tests)
- README.md: build setup, all fixes explained, triage decisions, next steps
- AI-USAGE.md: honest account of AI use, errors caught, independent decisions
- ADR 0001: tenant-aware provider selection decision with alternatives